[tool.poetry]
name = "rag-llm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-chroma = "^0.1.4"
langchain-huggingface = "^0.1.0"
langchain = "^0.3.0"
pyperclip = "^1.9.0"
torch = "^2.4.1"
einops = "^0.8.0"
langchain-community = "^0.3.0"
pypdf = "^5.0.0"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
