[tool.poetry]
name = "semantic-document-retrieval"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain-chroma = "^0.1.4"
langchain-huggingface = "^0.1.0"
langchain = "^0.3.0"
pyperclip = "^1.9.0"
torch = "^2.4.1"
einops = "^0.8.0"
langchain-community = "^0.3.0"
pypdf = "^5.0.0"
pypdf2 = "^3.0.1"
unstructured = {extras = ["md"], version = "^0.15.12"}
nltk = "^3.9.1"
docx2txt = "^0.8"
python-magic = "^0.4.27"
python-pptx = "^1.0.2"
python-docx = "^1.1.2"
pypandoc = "^1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
